# electron-vite-vue

./: electron-builder.json5  package.json  vite.config.ts
backend/: README.md  fastapi-backend.spec  pyproject.toml
backend/app/: main.py
electron/main/: index.ts  logger.ts  store.ts
electron/preload/: index.ts
src/: main.ts  vite-env.d.ts
src/api/: index.ts
src/router/: index.ts
src/utils/: http.ts
src/views/: NotFound.vue
